# lipsank

./: CMakeLists.txt  README.md  WASM_BUILD.md  lipsank.h
docs/: index.html  lipsync.js  lipsync.wasm  lipsync_wasm.cpp
examples/: wav_wasapi.cpp
